--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <script src="./index.js"></script>
+        <script src="../js/index.js"></script>
         <title>My Portfolio</title>
-        <link rel="stylesheet" href="../../styles/styles.css" />
+        <link rel="stylesheet" href="../styles/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
@@ -14,26 +14,38 @@
                     <div class="navbar-links">
                         <ul>
                             <li>
-                                <a href="../index.html" target="_self">Home</a>
+                                <a href="./index.html" target="_self">Home</a>
                             </li>
                             <li>
-                                <a href="../projects.html" target="_self">Projects</a>
+                                <a href="./pagaes/projects.html" target="_self">Projects</a>
                             </li>
                             <li>
                                 <div class="dropdown">
                                     <button class="dropbtn">Documentation<i class="fa fa-caret-down"></i></button>
                                     <div class="dropdown-content">
-                                        <a href="./batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
-                                        <a href="./batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
-                                        <a href="./discordBots.html" target="_self">Discord Bots</a>
+                                        <a href="./pages/docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
+                                        <a href="./pages/docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
+                                        <a href="./pages/docs/discordBots.html" target="_self">Discord Bots</a>
                                     </div>
                                 </div>
                             </li>
                             <li>
-                                <a href="../aboutMe.html" target="_self">about Me</a>
+                                <a href="./pages/aboutMe.html" target="_self">about Me</a>
+                            </li>
+                            <li class="box">
+                                    <form name="search">
+                                        <input type="text" class="input" name="txt" onmouseout="this.value = ''; this.blur();">
+                                    </form>
+                                    <i class="fa fa-search"></i>
                             </li>
                         </ul>
                     </div>
+                </div>
+                <div class="card" id="content" style="color: white; text-align:center; z-index: 100; position: relative; ">
+                    <h2>Welcome!</h2>
+                    <p>
+                        Hello! Welcome to my portfolio website. Feel free to look around at some of my projects by using the navbar up top!
+                    </p>
                 </div>
                 <div id="background">
                     <div class="glowing_stars">
@@ -56,11 +68,7 @@
                         <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
                         <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
                 </div>
-                <div class="social-footer-left">
-
-                </div>
             </footer>
-            <div id="footer-vab"></div>
         </div>
     </body>
 </html>
