--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -17,7 +17,7 @@
                 <div class="navbar-links">
                     <ul>
                         <li>
-                            <a href="./index.html" target="_self">Home</a>
+                            <a href="../index.html" target="_self">Home</a>
                         </li>
                         <li>
                             <a href="./projectPage.html" target="_self">Projects</a>
