--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -14,7 +14,7 @@
                     <div class="navbar-links">
                         <ul>
                             <li>
-                                <a href="./index.html" target="_self">Home</a>
+                                <a href="../index.html" target="_self">Home</a>
                             </li>
                             <li>
                                 <a href="./projects.html" target="_self">Projects</a>
