--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <script src="../js/index.js"></script>
         <title>My Portfolio</title>
-        <link rel="stylesheet" href="../styles/styles.css" />
+        <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
