--- a/src/404.html
+++ b/src/404.html
@@ -457,23 +457,23 @@ li a:hover {
                 <div class="navbar-links">
                     <ul>
                         <li>
-                            <a href="../index.html" target="_self">Home</a>
+                            <a href="./index.html" target="_self">Home</a>
                         </li>
                         <li>
-                            <a href="./projectPage.html" target="_self">Projects</a>
+                            <a href="./pages/projects.html" target="_self">Projects</a>
                         </li>
                         <li>
                             <div class="dropdown">
                                 <button class="dropbtn">Documentation<i class="fa fa-caret-down" ></i></button>
                                 <div class="dropdown-content">
-                                    <a href="./docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
-                                    <a href="./docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
-                                    <a href="./docs/discordBots.html" target="_self">Discord Bots</a>
+                                    <a href="./pages/docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
+                                    <a href="./pages/docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
+                                    <a href="./pages/docs/discordBots.html" target="_self">Discord Bots</a>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <a href="./aboutMe.html" target="_self">about Me</a>
+                            <a href="./pages/aboutMe.html" target="_self">about Me</a>
                         </li>
                     </ul>
                 </div>
