--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                                 <a href="./index.html" target="_self">Home</a>
                             </li>
                             <li>
-                                <a href="./pagaes/projects.html" target="_self">Projects</a>
+                                <a href="./pages/projects.html" target="_self">Projects</a>
                             </li>
                             <li>
                                 <div class="dropdown">
