--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="./index.js"></script>
-        <title>My Portfolio</title>
+        <title>About Me</title>
         <link rel="stylesheet" href="../styles/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
