--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
-        <div id="page">
+        <div class="page">
             <div id="content">
                 <div class="custom-navbar">
                     <div class="navbar-links">
@@ -55,14 +55,15 @@
                         <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
                     </div>
                 </div>
+                <footer id="footer-desktop", class="bottom-div">
+                    <div id="footer" class="flex-container">
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                    </div>
+                </footer>
             </div>
-            <footer id="footer-desktop", class="bottom-div">
-                <div id="footer" class="flex-container">
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
-                </div>
-            </footer>
+            
         </div>
     </body>
 </html>
