--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
-        <div id="page">
-            <div id="content">
+        <div class="page">
+            <div class="content">
                 <div class="custom-navbar">
                     <div class="navbar-links">
                         <ul>
@@ -49,17 +49,38 @@
                         <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
                     </div>
                 </div>
-            </div>
-            <footer id="footer-desktop", class="bottom-div">
-                <div id="footer" class="flex-container">
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                <div id="about me info" class="card">
+                    <h1 >About Me!</h1>
+                    <p>Hey, I'm Michael. I tinker with various electroincs and programming languages. Electrical engineering is my passion and I've made / am working on a lot of cool projects, which you can checkout <a href="./projects.html
+                        ">Here</a>.</p>
+                    <br>
+                    <p> I'm currently a senior in High School and am the lead of the frc team <a href="https://lightningrobotics.com" target="_blank">862</a>'s electrical subgroup</p>
+                    <br>
+                    <p> Besides electronics, I also tinker with programming. Currently I have some experience with javascript, typescript, python, html, css, java, and c++/arduino, although im still learning. I'm currently, however, most comfortable with javascript and typescript.</p>
                 </div>
-                <div class="social-footer-left">
 
+                <div id="about me links" class="card">
+                    <h3>A little more info</h3>
+                    <h4 style="text-align:left; padding-left: 80px;">Github</h4>
+                    <p style="padding: 0px 50px">On my <a href="https://github.com/mikecerc/ target="_blank">Github</a>, I have all of the code to my projects. Feel free to check it out, it's public.</p>
+                    <img src="https://github-readme-stats.vercel.app/api?username=mikecerc&show_icons=true&theme=dracula&count_private=true&title_color=5f356b"></img>
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=mikecerc&show_icons=true&theme=dracula&count_private=true&title_color=5f356b&layout=compact"></img>
+                    <br>
+                    <h4 style="text-align:left; padding-left: 80px;">Resume</h4>
+                    <p>If you would like to view my resume you may do so by clicking <a href='./resume.html'>here</a>.</p>
+                    <br>
+                    <h4 style="text-align:left; padding-left: 80px;">Contact Me</h4>
+                    <p>If you have any questions or inquiries, feel free to reach out by <a href="./contact.html">emailing me</a>.</p>
                 </div>
-            </footer>
+                <footer id="footer-desktop", class="bottom-div">
+                    <div id="footer" class="flex-container">
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                    </div>
+                </footer>
+            </div>
+            
         </div>
     </body>
 </html>
