styling + updated redirects

--- a/src/404.html
+++ b/src/404.html
@@ -89,9 +89,11 @@ html, body{
 }
 
 .navbar-links{
-    display: inline-block;
+    float: right;
     margin-right: 15px;
     text-transform: uppercase;
+    
+    
 }
 
 ul {
