--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
-        <div class="page">
+        <div class="page stars">
             <div id="content">
                 <div class="custom-navbar">
                     <div class="navbar-links">
