--- a/src/pages/construction.html
+++ b/src/pages/construction.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="./index.js"></script>
-        <title>404</title>
+        <title>Under Construction</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 <body class="bg-purple">
