--- a/src/404.html
+++ b/src/404.html
@@ -5,6 +5,7 @@
         <script src="./index.js"></script>
         <title>404</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     </head>
 <body class="bg-purple">
         <style>
