--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,82 +1,110 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8" />
-        <script src="../js/index.js"></script>
-        <title>My Projects</title>
-        <link rel="stylesheet" href="../styles/styles.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    </head>
-    <body class="bg-purple">
-        <div id="page stars">
-            <div id="content">
-                <div class="custom-navbar">
-                    <div class="navbar-links">
-                        <ul>
-                            <li>
-                                <a href="../index.html" target="_self">Home</a>
-                            </li>
-                            <li>
-                                <a href="./projects.html" target="_self">Projects</a>
-                            </li>
-                            <li>
-                                <div class="dropdown">
-                                    <button class="dropbtn">Documentation<i class="fa fa-caret-down"></i></button>
-                                    <div class="dropdown-content">
-                                        <a href="./docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
-                                        <a href="./docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
-                                        <a href="./docs/discordBots.html" target="_self">Discord Bots</a>
-                                    </div>
+
+<head>
+    <meta charset="utf-8" />
+    <script src="../js/index.js"></script>
+    <title>My Projects</title>
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+</head>
+
+<body class="bg-purple">
+    <div id="page">
+        <div id="content">
+            <div class="custom-navbar">
+                <div class="navbar-links">
+                    <ul>
+                        <li>
+                            <a href="../index.html" target="_self">Home</a>
+                        </li>
+                        <li>
+                            <a href="./projects.html" target="_self">Projects</a>
+                        </li>
+                        <li>
+                            <div class="dropdown">
+                                <button class="dropbtn">Documentation<i class="fa fa-caret-down"></i></button>
+                                <div class="dropdown-content">
+                                    <a href="./docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
+                                    <a href="./docs/batteryMonitoring.html" target="_self">Automated Battery
+                                        Monitoring</a>
+                                    <a href="./docs/discordBots.html" target="_self">Discord Bots</a>
                                 </div>
-                            </li>
-                            <li>
-                                <a href="./aboutMe.html" target="_self">about Me</a>
-                            </li>
-                        </ul>
-                    </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./aboutMe.html" target="_self">about Me</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card">
-                    <h1 class="projects-header">Projects</h1>
-                    <div class="flex-container">
-                            <div class="project-spacer"></div>
-                            <div><button class="project-button project-button-selected" onclick="return switchPage('1')" id="project-batteryLog" type="button">Digital Battery Log</button></div>
-                            <div><button class="project-button project-button-deselected" onclick="return switchPage('2')" id="project-batteryMonitoring" type="button">Battery Monitoring</button></div>
-                            <div><button class="project-button project-button-deselected" onclick="return switchPage('3')" id="project-discordBots" type="button">Discord bots</button></div>
-                            <div><button class="project-button project-button-deselected" onclick="return switchPage('4')" id="project-fireworks" type="button">Electronic fireworks display</button></div>
-                            <div class="project-spacer"></div>
-                    </div>
-                    <div id="batteryLog" style="display: block;"><p>stuff 1</p></div>
-                    <div id="batteryMonitoring" style="display: none;"><p>stuff 2</p></div>
-                    <div id="discordBots" style="display: none;"><p>stuff 3</p></div>
-                    <div id="fireworks" style="display: none;"><p>stuff 4</p></div>
+            </div>
+            <div class="card">
+                <h1 class="projects-header">Projects</h1>
+                <div class="flex-container">
+                    <div class="project-spacer"></div>
+                    <div><button class="project-button project-button-selected" onclick="return switchPage('1')"
+                            id="project-batteryLog" type="button">Digital Battery Log</button></div>
+                    <div><button class="project-button project-button-deselected" onclick="return switchPage('2')"
+                            id="project-batteryMonitoring" type="button">Battery Monitoring</button></div>
+                    <div><button class="project-button project-button-deselected" onclick="return switchPage('3')"
+                            id="project-discordBots" type="button">Discord bots</button></div>
+                    <div><button class="project-button project-button-deselected" onclick="return switchPage('4')"
+                            id="project-fireworks" type="button">Electronic fireworks display</button></div>
+                    <div class="project-spacer"></div>
+                </div>
+                <div id="batteryLog" style="display: block;">
+                    <h2 style="text-align:left; padding-left: 20px;">Digital Battery Logger</h2>
+                    <p style="padding:0px 50px">Being part of an frc team's electrical subgroup for 4 years, I've
+                        picked up on a few things that can be improved. One thing that our team does is record when we
+                        use batteries, along with their stats (internal resistance and state of charge). This practice is generally a good idea, as it allows us 
+                        to track the usage of a specific battery at a competition so we can avoid using again too quickly.
+                        Additionally, we can use this data to express how a specific battery is performing overall through out the season.
+                        For many years, we've been recording this information by hand, which has its issues, such as poor had-writing, inability to find a pen, running out of room, etcetera.
+                        So, the idea of turing this digital was fostered. The idea was to use a raspberry pi and a touchscreen display to record this data. 
+                        Accomplishing this was quite straightforward. The graphical interface was created with html, css, and javascript and run via an http server. 
+                        Using http requests, the data is recorded in a MongoDb database. 
+                        A big feature that I wanted was to be able to have the logs automatically synced to a google spreadsheet. This was done by using the google sheets API. 
+                        It's super convenient to have it auto sync to a spreadsheet, so we no longer have to manually transcribe the data to keep a more permanent record anymore.
+                    </p>
+                </div>
+                <div id="batteryMonitoring" style="display: none;">
+                    <p>stuff 2</p>
+                </div>
+                <div id="discordBots" style="display: none;">
+                    <p>stuff 3</p>
+                </div>
+                <div id="fireworks" style="display: none;">
+                    <p>stuff 4</p>
+                </div>
+
+            </div>
+            <div id="background">
+                <div class="glowing_stars">
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
 
                 </div>
-                <div id="background">
-                    <div class="glowing_stars">
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-        
-                    </div>
-                    <div class="earth-moon-close">
-                        <img class="object_earth_close" src="http://salehriaz.com/404Page/img/earth.svg" width="30%">
-                        <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
-                    </div>
+                <div class="earth-moon-close">
+                    <img class="object_earth_close" src="http://salehriaz.com/404Page/img/earth.svg" width="30%">
+                    <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
                 </div>
-                <footer id="footer-desktop", class="bottom-div">
-                    <div id="footer" class="flex-container">
-                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
-                    </div>
-                    <div class="social-footer-left">
-    
-                    </div>
-                </footer>
             </div>
+            <footer id="footer-desktop" , class="bottom-div">
+                <div id="footer" class="flex-container">
+                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
+                                class="fa fa-github" aria-hidden="true"></i></a></div>
+                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
+                                class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
+                                class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                </div>
+            </footer>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
