temp unredirect proj page

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -69,13 +69,13 @@
                     </p>
                 </div>
                 <div id="batteryMonitoring" style="display: none;">
-                    <p>stuff 2</p>
+                    <p>Under Construction</p>
                 </div>
                 <div id="discordBots" style="display: none;">
-                    <p>stuff 3</p>
+                    <p>Under Construction</p>
                 </div>
                 <div id="fireworks" style="display: none;">
-                    <p>stuff 4</p>
+                    <p>Under Construction</p>
                 </div>
 
             </div>
