wow, ok, that was super super funny. wow. what a good joke web dev. I love you web dev. You've harmed me. OML I love everything. Life is goodgit add *!

--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -63,7 +63,7 @@
                 <div id="about me links" class="card">
                     <h3>A little more info</h3>
                     <h4 style="text-align:left; padding-left: 80px;">Github</h4>
-                    <p style="padding: 0px 50px">On my <a href="https://github.com/mikecerc/ target="_blank">Github</a>, I have all of the code to my projects. Feel free to check it out, it's public.</p>
+                    <p style="padding: 0px 50px">On my <a href="https://github.com/mikecerc/" target="_blank">Github</a>, I have all of the code to my projects. Feel free to check it out, it's public.</p>
                     <img src="https://github-readme-stats.vercel.app/api?username=mikecerc&show_icons=true&theme=dracula&count_private=true&title_color=5f356b"></img>
                     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=mikecerc&show_icons=true&theme=dracula&count_private=true&title_color=5f356b&layout=compact"></img>
                     <br>
@@ -73,7 +73,7 @@
                     <h4 style="text-align:left; padding-left: 80px;">Contact Me</h4>
                     <p>If you have any questions or inquiries, feel free to reach out by <a href="./contact.html">emailing me</a>.</p>
                 </div>
-                <footer id="footer-desktop", class="bottom-div">
+                <footer id="footer-desktop" class="bottom-div">
                     <div id="footer" class="flex-container">
                             <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
                             <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
