--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="card" id="content" style="color: white; text-align:center; z-index: 2; position: relative; ">
+                <div class="card" id="content">
                     <h2>Welcome!</h2>
                     <p>
                         Hello! Welcome to my portfolio website. Feel free to look around at some of my projects by using the navbar up top!
