--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -11,8 +11,8 @@
 </head>
 
 <body class="bg-purple">
-    <div id="page">
-        <div id="content">
+    <div class="page stars">
+        <div class="content">
             <div class="custom-navbar">
                 <div class="navbar-links">
                     <ul>
@@ -93,7 +93,7 @@
                     <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
                 </div>
             </div>
-            <footer id="footer-desktop" , class="bottom-div">
+            <footer id="footer-desktop" class="bottom-div">
                 <div id="footer" class="flex-container">
                     <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
                                 class="fa fa-github" aria-hidden="true"></i></a></div>
