--- a/src/pages/games.html
+++ b/src/pages/games.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <script src="../../js/index.js"></script>
-        <title>Discord Bots</title>
-        <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
-        <link rel="stylesheet" href="../../styles/styles.css" />
+        <script src="../js/index.js"></script>
+        <title>Games</title>
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+        <link rel="stylesheet" href="../styles/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body class="bg-purple">
@@ -15,18 +15,18 @@
                     <div class="navbar-links">
                         <ul>
                             <li>
-                                <a href="../../index.html" target="_self">Home</a>
+                                <a href="../index.html" target="_self">Home</a>
                             </li>
                             <li>
-                                <a href="../projects.html" target="_self">Projects</a>
+                                <a href="./projects.html" target="_self">Projects</a>
                             </li>
                             <li>
                                 <div class="dropdown">
                                     <button class="dropbtn">Documentation<i class="fa fa-caret-down"></i></button>
                                     <div class="dropdown-content">
-                                        <a href="./batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
-                                        <a href="./batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
-                                        <a href="./discordBots.html" target="_self">Discord Bots</a>
+                                        <a href="../docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
+                                        <a href="../docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
+                                        <a href="../docs/discordBots.html" target="_self">Discord Bots</a>
                                     </div>
                                 </div>
                             </li>
@@ -35,6 +35,11 @@
                             </li>
                         </ul>
                     </div>
+                </div>
+                <div class="card">
+                    <h1>Games!</h1>
+                    <P>Play some web based games below!</P>
+                    <a class="games-button" href="./games/pong.html">Pong</a>
                 </div>
                 <div id="background">
                     <div class="glowing_stars">
@@ -50,18 +55,15 @@
                         <img class="object_moon_close" src="http://salehriaz.com/404Page/img/moon.svg" width="23%">
                     </div>
                 </div>
+                <footer id="footer-desktop", class="bottom-div">
+                    <div id="footer" class="flex-container">
+                            <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+                            <div><a href="./contact.html" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                            <div><a href="./resume.html" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                            <div><a href="./games.html" target="_self" class="social-footer-icons"><i class="fa fa-gamepad" aria-hidden="true"></i></a></div>
+                    </div>
+                </footer>
             </div>
-            <footer id="footer-desktop", class="bottom-div">
-                <div id="footer" class="flex-container">
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                        <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
-                </div>
-                <div class="social-footer-left">
-
-                </div>
-            </footer>
-            <div id="footer-vab"></div>
         </div>
     </body>
 </html>
