--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <script src="./index.js"></script>
+        <script src="../js/index.js"></script>
         <title>About Me</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <link rel="stylesheet" href="../styles/styles.css" />
