--- a/src/pages/construction.html
+++ b/src/pages/construction.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <script src="./index.js"></script>
+        <script src="../js/index.js"></script>
         <title>Under Construction</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
