--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -95,12 +95,10 @@
             </div>
             <footer id="footer-desktop" class="bottom-div">
                 <div id="footer" class="flex-container">
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
-                                class="fa fa-github" aria-hidden="true"></i></a></div>
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
-                                class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i
-                                class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+                    <div><a href="./contact.html" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                    <div><a href="./resume.html" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                    <div><a href="./games.html" target="_self" class="social-footer-icons"><i class="fa fa-gamepad" aria-hidden="true"></i></a></div>
                 </div>
             </footer>
         </div>
