--- a/src/404.html
+++ b/src/404.html
@@ -505,12 +505,10 @@ li a:hover {
         </div>
         <footer id="footer-desktop", class="bottom-div">
             <div id="footer" class="flex-container">
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                    <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
-            </div>
-            <div class="social-footer-left">
-
+                <div><a href="https://www.github.com/mikecerc" target="_blank" class="social-footer-icons"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+                <div><a href="./pages/contact.html" target="_blank" class="social-footer-icons"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
+                <div><a href="./pages/resume.html" target="_blank" class="social-footer-icons"><i class="fa fa-file-word-o" aria-hidden="true"></i></a></div>
+                <div><a href="./pages/games.html" target="_self" class="social-footer-icons"><i class="fa fa-gamepad" aria-hidden="true"></i></a></div>
             </div>
         </footer>
     </body>
