--- a/src/pages/games.html
+++ b/src/pages/games.html
@@ -24,14 +24,14 @@
                                 <div class="dropdown">
                                     <button class="dropbtn">Documentation<i class="fa fa-caret-down"></i></button>
                                     <div class="dropdown-content">
-                                        <a href="../docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
-                                        <a href="../docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
-                                        <a href="../docs/discordBots.html" target="_self">Discord Bots</a>
+                                        <a href="./docs/batteryLog.html" target="_self">Digital Battery Logging (frc)</a>
+                                        <a href="./docs/batteryMonitoring.html" target="_self">Automated Battery Monitoring</a>
+                                        <a href="./docs/discordBots.html" target="_self">Discord Bots</a>
                                     </div>
                                 </div>
                             </li>
                             <li>
-                                <a href="../aboutMe.html" target="_self">about Me</a>
+                                <a href="./aboutMe.html" target="_self">about Me</a>
                             </li>
                         </ul>
                     </div>
