--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     </head>
     <body class="bg-purple">
         <div class="page stars">
-            <div id="content">
+            <div class="content">
                 <div class="custom-navbar">
                     <div class="navbar-links">
                         <ul>
