--- a/src/pages/aboutMe.html
+++ b/src/pages/aboutMe.html
@@ -57,7 +57,7 @@
                     <br>
                     <p> I'm currently a senior in High School and am the lead of the frc team <a href="https://lightningrobotics.com" target="_blank">862</a>'s electrical subgroup</p>
                     <br>
-                    <p> Besides electronics, I also tinker with programming. Currently I have some experience with javascript, typescript, python, html, css, java, and c++/arduino, although im still learning. I'm currently, however, most comfortable with javascript and typescript.</p>
+                    <p> Besides electronics, I also tinker with programming. Currently I have some experience with javascript, typescript, python, html, css, java, and c++/arduino, although I'm still learning. I'm currently, however, most comfortable with javascript and typescript.</p>
                 </div>
 
                 <div id="about me links" class="card">
