--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -60,7 +60,7 @@
                         use batteries, along with their stats (internal resistance and state of charge). This practice is generally a good idea, as it allows us 
                         to track the usage of a specific battery at a competition so we can avoid using batteries again too quickly.
                         Additionally, we can use this data to express how a specific battery is performing overall through out the season.
-                        For many years, we've been recording this information by hand, which has its issues, such as poor had-writing, inability to find a pen, running out of room, et cetera.
+                        For many years, we've been recording this information by hand, which has its issues, such as poor handwriting, inability to find a pen, running out of room, et cetera.
                         So, the idea of turing this digital was fostered. The idea was to use a raspberry pi and a touchscreen display to record this data. 
                         Accomplishing this was quite straightforward. The graphical interface was created with html, css, and javascript and run via an http server. 
                         Using http requests, the data is recorded in a MongoDb database. 
