--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -65,7 +65,7 @@
                         Accomplishing this was quite straightforward. The graphical interface was created with html, css, and javascript and run via an http server. 
                         Using http requests, the data is recorded in a MongoDb database. 
                         A big feature that I wanted was to be able to have the logs automatically synced to a google spreadsheet. This was done by using the google sheets API. 
-                        It's super convenient to have it auto sync to a spreadsheet, so we no longer have to manually transcribe the data to keep a more permanent record anymore.
+                        It's super convenient to have it auto sync to a spreadsheet, so we no longer have to manually transcribe the data for record-keeping purposes.
                     </p>
                 </div>
                 <div id="batteryMonitoring" style="display: none;">
